<resources>
    <string name="app_name">Dermato.AI</string>
    <string name="tagline_image_view_description">Logo of our app</string>
    <string name="sing_up_text">Sign Up</string>
    <string name="ask_to_sign_up_text">Already have an account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">\@</string>
    <string name="home_menu_title">Home</string>
    <string name="form_menu_title">Forum</string>
    <string name="capture_menu_title">Analyze</string>
    <string name="appointment_menu_title">Connect</string>
    <string name="upcoming_title">UPCOMING</string>
    <string name="finished_title">FINISHED</string>
    <string name="confidence_score_template">%1$d%%</string>
    <string name="toolbar_title">Dermato Connect</string>
    <string name="button_detail_text">DETAIL</string>
    <string name="button_meet_text">MEET</string>
    <string name="classify_text_dumy">Cancer</string>
    <string name="birth_title">What’s your birth date?</string>
    <string name="birth_title_subtitle_text">This won’t be public</string>
    <string name="month_input_text_placeholder">Month</string>
    <string name="date_input_text_placeholder">Date</string>
    <string name="year_input_text_placeholder">Year</string>
    <string name="term_message_text">By signing up, you agree to the Terms of Service and Privacy Policy, Including Cookie Use. Dermato.Ai may use your contact information, including your email address and phone number for purposes outlined in our Privacy Policy, like keeping your account secure and personalizing our services. Learn more. Others will be able to find you by email or phone number.</string>
    <string name="continue_button_text">CONTINUE</string>
    <string name="preview_desc_text">frame for image preview directly from camera</string>
    <string name="lens_button_desc_text">lens button to change lens used to camera</string>
    <string name="flash_button_desc_text">flash button for setup lens when image captured</string>
    <string name="history_title_text">Your Diagnosis Records</string>
    <string name="headline_sign_in_text">Have any issue with your skin?</string>
    <string name="text2_subtitle_text">Join today</string>
    <string name="sign_in_with_google_text">SIGN IN WITH GOOGLE</string>
    <string name="term_sign_in_text">By signing up you agree to the Terms of Service and Privacy Policy including Cookie Use.</string>
    <string name="register_ask_title_text">does’t have account ?</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="nickname_headline_title">What should we call you?</string>
    <string name="nickname_subtitle_text">Your @username is Unique. You can’t change it.</string>
    <string name="username_placeholder_text">Username</string>
    <string name="result_header_title">Dermato Diagnosis Results</string>
    <string name="uv_scale_text">UV Scale</string>
    <string name="dummy_60">-</string>
    <string name="force_unit">Km/h</string>
    <string name="force_text">Force</string>
    <string name="sensible_text">Sensible</string>
    <string name="humidity_text">Humidity</string>
    <string name="dummy_sun_type_desc">Sun with a cool</string>
    <string name="dummy_sun_type">Cloud</string>
    <string name="celsius_format">%1$.0f° C</string>
    <string name="degree_format">%1$.0f°</string>
    <string name="percent_format">%1$d%%</string>
    <string name="speed_format">%1$.1f m/s</string>
    <string name="text_let_s_discuss_the_skin_issues_you_re_currently_experiencing">Let’s discuss the skin issues you’re currently experiencing</string>
    <string name="text_user">user</string>
    <string name="logout_text">LOGOUT</string>
    <string name="about_body_text">
        Dermato.AI is an innovative platform that utilizes advanced machine learning to accurately identify skin conditions. By analyzing images of skin concerns, our AI algorithms can quickly and efficiently provide potential diagnoses. This empowers individuals to make informed decisions about their skin health and seek appropriate medical attention.\n\nOur mission is to revolutionize dermatology by making accurate and accessible skin assessments available to everyone. With Dermato.AI, you can streamline the diagnostic process, reduce anxiety, and take proactive steps towards improving your skin health.
    </string>
    <string name="gemini_system_instruction">I am a doctor who analyzes skin diseases and I only need the name of the disease and then provide information about it such as the cause and how to prevent it and what the medicine is. i know ever language but my information must in english as professional doctor</string>
    <string name="type_a_message_hint">Type a message...</string>

    <string name="location_adding">Location: %1$s</string>
    <string name="cancel_text">Cancel</string>


    <string-array name="dates">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>