<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="31dp"
    tools:context=".ui.SignInFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:shapeAppearanceOverlay="@style/ImageView.Circle" />

    <TextView
        android:id="@+id/tagline_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline_sign_in_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

    <TextView
        android:id="@+id/text1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/text2_subtitle_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/google__g__logo"
        android:text="@string/sign_in_with_google_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1_text_view" />

    <TextView
        android:id="@+id/text2_text_view"
        style="@style/Text.Transparent.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/term_sign_in_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_sign_in_button" />

    <TextView
        android:id="@+id/text3_text_view"
        style="@style/Text.Transparent.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ask_title_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up_button_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3_text_view"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>