<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".ui.SignInActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/tagline_image_view_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagline_text_view"
        android:layout_width="318dp"
        android:layout_height="106dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

    <TextView
        android:id="@+id/text1_text_view"
        android:layout_width="127dp"
        android:layout_height="31dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="35dp"
        android:drawableEnd="@drawable/google__g__logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1_text_view" />

    <TextView
        android:id="@+id/text2_text_view"
        android:layout_width="256dp"
        android:layout_height="26dp"
        android:layout_marginTop="186dp"
        android:text="@string/ask_to_sign_up_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_sign_in_button" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:text="@string/sing_up_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>